fix scrollbar on mobile

--- a/frontend/app/home/home.component.scss
+++ b/frontend/app/home/home.component.scss
@@ -105,6 +105,12 @@
         }
     }
 
+    @media (max-width: 768px) {
+        .home-module-long-content {
+            padding-bottom: 10px;
+        }
+    }
+
     button {
         margin: 0 0 0 25px;
     }
